# memeinator

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml
memeinator/: __main__.py  download_memes.py  index.html
memeinator/client/: Makefile  build.zig  memenator.zig  set_wallpaper_linux.zig  set_wallpaper_windows.zig
memeinator/client/lib/: build.zig  obfuscation.zig
memeinator/client/tools/: generate_config.zig
memeinator/lib/: app.js
memeinator/static/: app.css  app.js
